--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@angular/router": "^16.1.6",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.8",
-    "apexcharts": "^3.41.0",
+    "apexcharts": "^3.44.2",
     "bootstrap": "^5.2.3",
+    "lodash-es": "^4.17.21",
+    "luxon": "^3.4.4",
     "ng-apexcharts": "^1.8.0",
     "ngx-scrollbar": "^13.0.3",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.0",
     "zone.js": "~0.13.1"
