--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@angular/compiler": "^16.1.6",
     "@angular/core": "^16.1.6",
     "@angular/forms": "^16.1.6",
+    "@angular/material": "^16.0.4",
     "@angular/platform-browser": "^16.1.6",
     "@angular/platform-browser-dynamic": "^16.1.6",
     "@angular/router": "^16.1.6",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.8",
+    "@syncfusion/ej2-angular-calendars": "^23.2.7",
     "apexcharts": "^3.44.2",
     "bootstrap": "^5.2.3",
+    "igniteui-angular": "^17.0.7",
     "lodash-es": "^4.17.21",
     "luxon": "^3.4.4",
     "ng-apexcharts": "^1.8.0",
@@ -35,7 +38,7 @@
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular-devkit/build-angular": "^16.0.1",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.6",
     "@types/jasmine": "~4.3.5",
